kubernetes/components/network/gateway/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: network
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: internal-params
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vaderrp.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaderrp-com-production-tls
