kubernetes/components/network/gateway/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: network
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: public-params
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vaderrp.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaderrp-com-production-tls
