kubernetes/components/network/gateway/flux-webhook-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames: ["flux-webhook.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
