kubernetes/components/network/gateway/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["grafana.vaderrp.com"]
  rules:
    - backendRefs:
        - name: grafana
          port: 80
