kubernetes/components/network/gateway/headlamp-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: tools
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["headlamp.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
