kubernetes/components/network/gateway/huntarr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: huntarr
  namespace: media
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames: ["huntarr.vaderrp.com"]
  rules:
    - backendRefs:
        - name: huntarr
          port: 9705
