kubernetes/components/network/gateway/loki-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: observability
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["loki.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki-gateway
          port: 80
