kubernetes/components/network/gateway/technitium-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
  namespace: network
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["technitium.vaderrp.com"]
  rules:
    - backendRefs:
        - name: technitium
          port: 5380
